--- a/machina/templates/machina/forum_tracking/mark_topics_read.html
+++ b/machina/templates/machina/forum_tracking/mark_topics_read.html
@@ -6,10 +6,10 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-xs-12">
-    <div class="panel panel-default topic-delete">
-      <div class="panel-heading"><h3 class="panel-title">{% trans "Mark topics read" %}</h3></div>
-      <div class="panel-body">
+  <div class="col-12">
+    <div class="card topic-delete">
+      <div class="card-header"><h3 class="card-title">{% trans "Mark topics read" %}</h3></div>
+      <div class="card-body">
         <div class="warning-message">{% trans "Are you sure you want to mark topics read?" %}</div>
         <form action="" method="post">{% csrf_token %}
           <input type="hidden" name="post" value="yes" />
