--- a/machina/templates/machina/forum_tracking/unread_topic_list.html
+++ b/machina/templates/machina/forum_tracking/unread_topic_list.html
@@ -6,19 +6,19 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-12">
             <h1>{% trans "View unread topics" %}</h1>
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-6 col-md-4 forum-actions-block">
+        <div class="col-6 col-md-4 forum-actions-block">
             {% if paginator.count > 0 %}
                 <p class="text-muted">
                 	{% blocktrans with paginator.count as topic_length %}{{ topic_length }} unread topics found{% endblocktrans %}
                 </p>
             {% endif %}
         </div>
-        <div class="col-xs-12 col-md-8 pagination-block">
+        <div class="col-12 col-md-8 pagination-block">
             {% with "pagination-sm" as pagination_size %}
                 {% include "partials/pagination.html" %}
             {% endwith %}
@@ -29,7 +29,7 @@
         {% include "forum_conversation/topic_list.html" %}
     {% endwith %}
     <div class="row">
-        <div class="col-xs-12 col-md-12 pagination-block">
+        <div class="col-12 col-md-12 pagination-block">
             {% with "pagination-sm" as pagination_size %}
                 {% include "partials/pagination.html" %}
             {% endwith %}
