--- a/machina/templates/machina/board_base.html
+++ b/machina/templates/machina/board_base.html
@@ -33,7 +33,7 @@
             <div class="input-group">
               <input type="text" class="form-control" placeholder="{% trans 'Search...' %}" name="q">
               <div class="input-group-btn">
-                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                <button class="btn btn-secondary" type="submit"><i class="glyphicon glyphicon-search"></i></button>
               </div>
             </div>
           </div>
@@ -49,9 +49,9 @@
 {% endblock header %}
 <div class="container" id="main_container">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-12">
       {% block breadcrumb %}{% include "partials/breadcrumb.html" %}{% endblock breadcrumb %}
-      <div class="pull-right controls-link-wrapper">
+      <div class="float-right controls-link-wrapper">
       {% if not request.user.is_anonymous %}
         <a href="{% url 'forum_member:user_subscriptions' %}" class="btn btn-link"><i class="fa fa-bookmark-o ">&nbsp;</i>{% trans "Subscriptions" %}</a>
         <a href="{% url 'forum_member:user_posts' request.user.id %}" class="btn btn-link"><i class="fa fa-comments-o ">&nbsp;</i>{% trans "View my posts" %}</a>
@@ -64,7 +64,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-12">
       <br />
       {% block messages %}{% include "partials/messages.html" %}{% endblock messages %}
     </div>
