--- a/machina/templates/machina/forum/forum_detail.html
+++ b/machina/templates/machina/forum/forum_detail.html
@@ -10,15 +10,15 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-12">
     <h1>{{ forum.name }}</h1>
   </div>
 </div>
 {% if sub_forums %}
 <div class="row">
-  <div class="forumlist-top-controls col-xs-12">
+  <div class="forumlist-top-controls col-12">
     {% if request.user.is_authenticated %}
-    <div class="pull-right">
+    <div class="float-right">
       <a href="{% url 'forum_tracking:mark_subforums_read' forum.pk %}" class="btn btn-link"><i class="fa fa-check-circle-o">&nbsp;</i>{% trans "Mark subforums read" %}</a>
     </div>
     {% endif %}
@@ -28,13 +28,13 @@
 {% endif %}
 {% if forum.is_forum %}
 <div class="row">
-  <div class="col-xs-6 col-md-4 forum-actions-block">
+  <div class="col-6 col-md-4 forum-actions-block">
     {% get_permission 'can_add_topic' forum request.user as user_can_add_topic %}
     {% if user_can_add_topic %}
     <a href="{% url 'forum_conversation:topic_create' forum.slug forum.pk %}" class="btn btn-primary btn-sm"><i class="fa fa-comments fa-lg"></i>&nbsp;{% trans "New topic" %}</a>
     {% endif %}
   </div>
-  <div class="col-xs-12 col-md-8 pagination-block">
+  <div class="col-12 col-md-8 pagination-block">
     {% with "pagination-sm" as pagination_size %}
     {% include "partials/pagination.html" %}
     {% endwith %}
@@ -52,12 +52,12 @@
 {% include "forum_conversation/topic_list.html" %}
 {% endwith %}
 <div class="row">
-  <div class="col-xs-6 col-md-4 forum-actions-block">
+  <div class="col-6 col-md-4 forum-actions-block">
     {% if user_can_add_topic %}
     <a href="{% url 'forum_conversation:topic_create' forum.slug forum.pk %}" class="btn btn-primary btn-sm"><i class="fa fa-comments fa-lg"></i>&nbsp;{% trans "New topic" %}</a>
     {% endif %}
   </div>
-  <div class="col-xs-12 col-md-8 pagination-block">
+  <div class="col-12 col-md-8 pagination-block">
     {% with "pagination-sm" as pagination_size %}
     {% include "partials/pagination.html" %}
     {% endwith %}
