--- a/machina/templates/machina/forum/forum_list.html
+++ b/machina/templates/machina/forum/forum_list.html
@@ -5,46 +5,46 @@
 {% load forum_tracking_tags %}
 
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-12">
     {% if forum_contents.nodes %}
     {% recurseforumcontents forum_contents %}
     {% if node.level == root_level %}
     {% if node.obj.is_category %}
-    <div class="panel panel-default forumlist">
-      <div class="panel-heading">
+    <div class="card forumlist">
+      <div class="card-header">
         <div class="row panel-row">
-          <div class="col-md-8 col-sm-9 col-xs-12 forum-name-col">
-            <h3 class="panel-title"><a href="{% url 'forum:forum' node.obj.slug node.obj.id %}" class="brand">{{ node.obj.name }}</a></h3>
+          <div class="col-md-8 col-sm-9 col-12 forum-name-col">
+            <h3 class="card-title"><a href="{% url 'forum:forum' node.obj.slug node.obj.id %}" class="brand">{{ node.obj.name }}</a></h3>
           </div>
-          <div class="col-md-1 forum-count-col hidden-sm hidden-xs">{% trans "Topics" %}</div>
-          <div class="col-md-1 forum-count-col hidden-sm hidden-xs">{% trans "Posts" %}</div>
-          <div class="col-md-2 col-sm-3 hidden-xs forum-last-post-col">{% trans "Last post" %}</div>
+          <div class="col-md-1 forum-count-col d-none d-md-block">{% trans "Topics" %}</div>
+          <div class="col-md-1 forum-count-col d-none d-md-block">{% trans "Posts" %}</div>
+          <div class="col-md-2 col-sm-3 d-none d-sm-block forum-last-post-col">{% trans "Last post" %}</div>
         </div>
       </div>
-      <div class="panel-body">
+      <div class="card-body">
         {{ children }}
       </div>
     </div>
     {% else %}
     {% with node.previous_sibling.obj as previous_sibling %}
     {% if previous_sibling and previous_sibling.is_category or not previous_sibling in forum_contents.visible_forums or not previous_sibling %}
-    <div class="panel panel-default forumlist">
-      <div class="panel-heading">
+    <div class="card forumlist">
+      <div class="card-header">
         <div class="row panel-row">
-          <div class="col-md-8 col-sm-9 col-xs-12 forum-name-col">
-            <h3 class="panel-title">{% trans "Forums" %}</h3>
+          <div class="col-md-8 col-sm-9 col-12 forum-name-col">
+            <h3 class="card-title">{% trans "Forums" %}</h3>
           </div>
-          <div class="col-md-1 forum-count-col hidden-sm hidden-xs">{% trans "Topics" %}</div>
-          <div class="col-md-1 forum-count-col hidden-sm hidden-xs">{% trans "Posts" %}</div>
+          <div class="col-md-1 forum-count-col d-none d-md-block">{% trans "Topics" %}</div>
+          <div class="col-md-1 forum-count-col d-none d-md-block">{% trans "Posts" %}</div>
           <div class="col-md-2 col-sm-3 hidden-xs forum-last-post-col">{% trans "Last post" %}</div>
         </div>
       </div>
-      <div class="panel-body">
+      <div class="card-body">
     {% endif %}
     {% endwith %}
     <div class="row panel-row">
       {% if not node.obj.is_link %}
-      <div class="col-md-7 col-sm-9 col-xs-11 forum-name">
+      <div class="col-md-7 col-sm-9 col-11 forum-name">
         <table class="forum-data-table">
           <tr>
             <td class="forum-icon {% if node.obj in unread_forums %}unread{% endif %}">
@@ -66,9 +66,9 @@
           </tr>
         </table>
       </div>
-      <div class="col-md-1 forum-syndication hidden-sm hidden-xs"><a href="{% url 'forum_feeds:forum_latest_topics_with_descendants' node.obj.slug node.obj.pk %}" title="{% trans 'RSS feed' %}"><i class="fa fa-rss-square"></i></a></div>
-      <div class="col-md-1 forum-count hidden-sm hidden-xs">{{ node.topics_count }}</div>
-      <div class="col-md-1 forum-count hidden-sm hidden-xs">{{ node.posts_count }}</div>
+      <div class="col-md-1 forum-syndication d-none d-md-block"><a href="{% url 'forum_feeds:forum_latest_topics_with_descendants' node.obj.slug node.obj.pk %}" title="{% trans 'RSS feed' %}"><i class="fa fa-rss-square"></i></a></div>
+      <div class="col-md-1 forum-count d-none d-md-block">{{ node.topics_count }}</div>
+      <div class="col-md-1 forum-count d-none d-md-block">{{ node.posts_count }}</div>
       <div class="col-md-2 col-sm-3 hidden-xs forum-last-post">
         {% if node.last_post %}
         {% if node.last_post.poster %}
@@ -89,7 +89,7 @@
         {% endif %}
       </div>
       {% else %}
-      <div class="col-md-8 col-sm-9 col-xs-11 forum-name" colspan="2">
+      <div class="col-md-8 col-sm-9 col-11 forum-name" colspan="2">
         <table class="forum-data-table">
           <tr>
             <td class="forum-icon link"><i class="fa fa-link fa-2x"></i></td>
@@ -100,8 +100,8 @@
           </tr>
         </table>
       </div>
-      <div class="col-md-1 forum-count hidden-sm hidden-xs"></div>
-      <div class="col-md-1 forum-count hidden-sm hidden-xs"></div>
+      <div class="col-md-1 forum-count d-none d-md-block"></div>
+      <div class="col-md-1 forum-count d-none d-md-block"></div>
       <div class="col-md-2 col-sm-3 hidden-xs forum-link-redirects">
         {% if node.obj.link_redirects %}
         {% trans "Total redirects:" %}&nbsp;{{ node.obj.link_redirects_count|default:"0" }}
@@ -120,7 +120,7 @@
     {% if node.parent.obj.is_category %}
     <div class="row panel-row">
       {% if not node.obj.is_link %}
-      <div class="col-md-7 col-sm-9 col-xs-11 forum-name">
+      <div class="col-md-7 col-sm-9 col-11 forum-name">
         <table class="forum-data-table">
           <tr>
             <td class="forum-icon {% if node.obj in unread_forums %}unread{% endif %}"><i class="fa fa-circle-o fa-2x"></i></td>
@@ -139,9 +139,9 @@
           </tr>
         </table>
       </div>
-      <div class="col-md-1 forum-syndication hidden-sm hidden-xs"><a href="{% url 'forum_feeds:forum_latest_topics_with_descendants' node.obj.slug node.obj.pk %}" title="{% trans 'RSS feed' %}"><i class="fa fa-rss-square"></i></a></div>
-      <div class="col-md-1 forum-count hidden-sm hidden-xs">{{ node.topics_count }}</div>
-      <div class="col-md-1 forum-count hidden-sm hidden-xs">{{ node.posts_count }}</div>
+      <div class="col-md-1 forum-syndication d-none d-md-block"><a href="{% url 'forum_feeds:forum_latest_topics_with_descendants' node.obj.slug node.obj.pk %}" title="{% trans 'RSS feed' %}"><i class="fa fa-rss-square"></i></a></div>
+      <div class="col-md-1 forum-count d-none d-md-block">{{ node.topics_count }}</div>
+      <div class="col-md-1 forum-count d-none d-md-block">{{ node.posts_count }}</div>
       <div class="col-md-2 col-sm-3 hidden-xs forum-last-post">
         {% if node.last_post %}
         {% if node.last_post.poster_id %}
@@ -162,7 +162,7 @@
         {% endif %}
       </div>
       {% else %}
-      <div class="col-md-8 col-sm-9 col-xs-11 forum-name" colspan="2">
+      <div class="col-md-8 col-sm-9 col-11 forum-name" colspan="2">
         <table class="forum-data-table">
           <tr>
             <td class="forum-icon link"><i class="fa fa-link fa-2x"></i></td>
@@ -173,8 +173,8 @@
           </tr>
         </table>
       </div>
-      <div class="col-md-1 forum-count hidden-sm hidden-xs"></div>
-      <div class="col-md-1 forum-count hidden-sm hidden-xs"></div>
+      <div class="col-md-1 forum-count d-none d-md-block"></div>
+      <div class="col-md-1 forum-count d-none d-md-block"></div>
       <div class="col-md-2 col-sm-3 hidden-xs forum-last-post forum-link-redirects">
         {% if node.obj.link_redirects %}
         {% trans "Total redirects:" %}&nbsp;{{ node.obj.link_redirects_count|default:"0" }}
@@ -196,18 +196,18 @@
     {% endif %}
     {% endrecurseforumcontents %}
     {% else %}
-    <div class="panel panel-default forumlist">
-      <div class="panel-heading">
+    <div class="card forumlist">
+      <div class="card-header">
         <div class="row panel-row">
-          <div class="col-md-8 col-sm-9 col-xs-9 forum-name-col">
-            <h3 class="panel-title">{% trans "Forums" %}</h3>
+          <div class="col-md-8 col-sm-9 col-9 forum-name-col">
+            <h3 class="card-title">{% trans "Forums" %}</h3>
           </div>
-          <div class="col-md-1 hidden-sm hidden-xs forum-count-col">{% trans "Topics" %}</div>
-          <div class="col-md-1 hidden-sm hidden-xs forum-count-col">{% trans "Posts" %}</div>
+          <div class="col-md-1 d-none d-md-block forum-count-col">{% trans "Topics" %}</div>
+          <div class="col-md-1 d-none d-md-block forum-count-col">{% trans "Posts" %}</div>
           <div class="col-md-2 col-sm-3 hidden-xs forum-last-post-col">{% trans "Last post" %}</div>
         </div>
       </div>
-      <div class="panel-body">
+      <div class="card-body">
         <div class="row panel-row">
           <div class="col-md-12">{% trans "No forums." %}</div>
         </div>
