--- a/machina/templates/machina/forum_member/forum_profile_detail.html
+++ b/machina/templates/machina/forum_member/forum_profile_detail.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-12">
     <h1>{% blocktrans with username=profile.user.username %}{{ username }} profile{% endblocktrans %}</h1>
     <br />
   </div>
@@ -13,7 +13,7 @@
 <div class="row profile">
   <div class="col-md-3">
     <div class="profile-sidebar">
-      <div class="panel panel-default">
+      <div class="card">
         <div class="profile-avatar">
           {% include "partials/avatar.html" with profile=profile placeholder=True %}
         </div>
@@ -30,17 +30,17 @@
     <div class="row">
       <div class="col-md-12">
         <div class="profile-content">
-          <div class="panel panel-default">
-            <div class="panel-heading">{% trans "Statistics" %}</div>
-            <div class="panel-body">
+          <div class="card">
+            <div class="card-header">{% trans "Statistics" %}</div>
+            <div class="card-body">
               <div class="row">
                 <div class="col-md-12 divider text-center">
-                  <div class="col-xs-12 col-sm-6 emphasis">
+                  <div class="col-12 col-sm-6 emphasis">
                     {% blocktrans count counter=profile.posts_count %}<h2><strong>{{ counter }}</strong></h2>
                     <p><small>Post</small></p>{% plural %}<h2><strong>{{ counter }}</strong></h2>
                     <p><small>Posts</small></p>{% endblocktrans %}
                   </div>
-                  <div class="col-xs-12 col-sm-6 emphasis">
+                  <div class="col-12 col-sm-6 emphasis">
                     {% blocktrans count counter=topics_count %}<h2><strong>{{ counter }}</strong></h2>
                     <p><small>Topic</small></p>{% plural %}<h2><strong>{{ counter }}</strong></h2>
                     <p><small>Topics</small></p>{% endblocktrans %}
@@ -54,9 +54,9 @@
     </div>
     <div class="row recent-posts">
       <div class="col-md-12">
-        <div class="panel panel-default">
-          <div class="panel-heading">{% trans "Recent posts" %}{% if recent_posts %}&nbsp;(<a href="{% url 'forum_member:user_posts' profile.user_id %}">{% trans "View all" %}</a>){% endif %}</div>
-          <div class="panel-body">
+        <div class="card">
+          <div class="card-header">{% trans "Recent posts" %}{% if recent_posts %}&nbsp;(<a href="{% url 'forum_member:user_posts' profile.user_id %}">{% trans "View all" %}</a>){% endif %}</div>
+          <div class="card-body">
             {% for post in recent_posts %}
             <div class="row post">
               <div class="col-md-12 post-content-wrapper">
