--- a/machina/templates/machina/forum_member/forum_profile_update.html
+++ b/machina/templates/machina/forum_member/forum_profile_update.html
@@ -6,18 +6,18 @@
 {% block content %}
     <br />
     <div class="row member-profile-edit">
-        <div class="col-xs-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">{% trans "Edit forum profile" %}</h3>
+        <div class="col-12">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">{% trans "Edit forum profile" %}</h3>
                 </div>
-                <div class="panel-body">
+                <div class="card-body">
                     <form method="post" action="." class="form" enctype="multipart/form-data" novalidate>{% csrf_token %}{% if form.avatar %}
                         <div class="row">
                             <div class="col-md-12">
 				                <div id="div_id_{{ form.avatar.html_name }}" class="form-group{% if form.avatar.errors %} has-error{% endif %}">
 				                    <div class="controls">
-				                    	{% if form.avatar.label %}<label class="control-label" for="{{ field.auto_id }}">{{ form.avatar.label }}{% if not form.avatar.field.required %} <span class="text-muted">{% trans "(optional)" %}</span>{% endif %}</label>{% endif %}
+				                    	{% if form.avatar.label %}<label class="col-form-label" for="{{ field.auto_id }}">{{ form.avatar.label }}{% if not form.avatar.field.required %} <span class="text-muted">{% trans "(optional)" %}</span>{% endif %}</label>{% endif %}
 				                    	{{ form.avatar }}
 				                        {% if form.avatar.help_text %}<p class="help-block">{{ form.avatar.help_text }}</p>{% endif %}
 				                        {% for error in form.avatar.errors %}<p class="error">{{ error }}</p>{% endfor %}
