--- a/machina/templates/machina/forum_member/topic_unsubscribe.html
+++ b/machina/templates/machina/forum_member/topic_unsubscribe.html
@@ -6,12 +6,12 @@
 
 {% block content %}
   <div class="row">
-    <div class="col-xs-12">
-    <div class="panel panel-default post-delete">
-      <div class="panel-heading">
-        <h3 class="panel-title">{% trans "Unsubscribe from topic" %}</h3>
+    <div class="col-12">
+    <div class="card post-delete">
+      <div class="card-header">
+        <h3 class="card-title">{% trans "Unsubscribe from topic" %}</h3>
       </div>
-      <div class="panel-body">
+      <div class="card-body">
         <div class="warning-message">{% trans "Would you like to unsubscribe from this topic?" %}</div>
         <form action="" method="post">{% csrf_token %}
           <input type="hidden" name="post" value="yes" />
