--- a/machina/templates/machina/forum_moderation/moderation_queue/detail.html
+++ b/machina/templates/machina/forum_moderation/moderation_queue/detail.html
@@ -5,12 +5,12 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-12">
             <h1>{% trans "Moderation queue" %}</h1>
         </div>
     </div>
 	<div class="alert alert-warning" role="alert">
-		<div class="pull-right">
+		<div class="float-right">
 			<a href="{% url 'forum_moderation:disapprove_queued_post' post.pk %}" class="btn btn-warning">{% trans "Disapprove" %}</a>
 			<a href="{% url 'forum_moderation:approve_queued_post' post.pk %}" class="btn btn-success"><b>{% trans "Approve" %}</b></a>
 		</div>
@@ -18,10 +18,10 @@
 		<p class="text-muted">{% if post.is_topic_head %}{% trans "New topic" %}{% else %}{% trans "New post" %}{% endif %}</p>
 	</div>
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-12">
             {% if post.is_topic_head and poll %}
-                <div class="panel panel-default poll">
-                    <div class="panel-body">
+                <div class="card poll">
+                    <div class="card-body">
                         <div class="row">
                             <div class="col-md-12 poll-content-wrapper">
                                 <h4 class="question">{{ poll.question }}</h4>
@@ -71,8 +71,8 @@
                     </div>
                 </div>
             {% endif %}
-            <div id="{{ post.id }}" class="panel panel-default post">
-                <div class="panel-body">
+            <div id="{{ post.id }}" class="card post">
+                <div class="card-body">
                     <div class="row">
                         <div class="col-md-10 post-content-wrapper">
                             <h4 class="subject">{{ post.subject }}</h4>
@@ -126,12 +126,12 @@
     </div>
     {% if previous_posts %}
 	    <div class="row">
-	        <div class="col-xs-12">
-	            <div class="panel panel-default topic-review">
-	                <div class="panel-heading">
-	                    <h3 class="panel-title">{% trans "Topic review" %}&nbsp;&ndash;&nbsp;{{ post.topic.subject }}</h3>
+	        <div class="col-12">
+	            <div class="card topic-review">
+	                <div class="card-header">
+	                    <h3 class="card-title">{% trans "Topic review" %}&nbsp;&ndash;&nbsp;{{ post.topic.subject }}</h3>
 	                </div>
-	                <div class="panel-body">
+	                <div class="card-body">
 	                    {% for post in previous_posts %}
 	                        <div class="row post-review">
 	                            <div class="col-md-10 post-content-wrapper">
