--- a/machina/templates/machina/forum_moderation/moderation_queue/list.html
+++ b/machina/templates/machina/forum_moderation/moderation_queue/list.html
@@ -5,40 +5,40 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-12">
             <h1>{% trans "Moderation queue" %}</h1>
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-6 col-md-4 forum-actions-block">
+        <div class="col-6 col-md-4 forum-actions-block">
             {% if paginator.count > 0 %}
                 <p class="text-muted">
                     {% blocktrans with paginator.count as topic_length %}{{ topic_length }} posts found{% endblocktrans %}
                 </p>
             {% endif %}
         </div>
-        <div class="col-xs-12 col-md-8 pagination-block">
+        <div class="col-12 col-md-8 pagination-block">
             {% with "pagination-sm" as pagination_size %}
                 {% include "partials/pagination.html" %}
             {% endwith %}
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-12">
-            <div class="panel panel-default postmoderationlist">
-                <div class="panel-heading">
+        <div class="col-12">
+            <div class="card postmoderationlist">
+                <div class="card-header">
                     <div class="row panel-row">
-                        <div class="col-xs-12 col-md-8 post-name-col">
-                            <h3 class="panel-title">{% trans "Moderation queue" %}</h3>
+                        <div class="col-12 col-md-8 post-name-col">
+                            <h3 class="card-title">{% trans "Moderation queue" %}</h3>
                         </div>
                         <div class="col-md-2 hidden-xs moderation-col">{% trans "Topic" %}</div>
                         <div class="col-md-2 hidden-xs moderation-col">{% trans "Forum" %}</div>
                     </div>
                 </div>
-                <div class="panel-body">
+                <div class="card-body">
                     {% for post in posts %}
                         <div class="row panel-row">
-                            <div class="col-xs-12 col-md-8 post-name">
+                            <div class="col-12 col-md-8 post-name">
                                 <table class="post-data-table">
                                     <tr>
                                         <td class="post-name">
@@ -84,7 +84,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-12 col-md-12 pagination-block">
+        <div class="col-12 col-md-12 pagination-block">
             {% with "pagination-sm" as pagination_size %}
                 {% include "partials/pagination.html" %}
             {% endwith %}
