--- a/machina/templates/machina/forum/forum_list.html
+++ b/machina/templates/machina/forum/forum_list.html
@@ -12,7 +12,7 @@
     {% if node.obj.is_category %}
     <div class="card forumlist">
       <div class="card-header">
-        <div class="row panel-row">
+        <div class="row">
           <div class="col-md-8 col-sm-9 col-12 forum-name-col">
             <h3 class="card-title"><a href="{% url 'forum:forum' node.obj.slug node.obj.id %}" class="brand">{{ node.obj.name }}</a></h3>
           </div>
@@ -30,19 +30,19 @@
     {% if previous_sibling and previous_sibling.is_category or not previous_sibling in forum_contents.visible_forums or not previous_sibling %}
     <div class="card forumlist">
       <div class="card-header">
-        <div class="row panel-row">
+        <div class="row">
           <div class="col-md-8 col-sm-9 col-12 forum-name-col">
             <h3 class="card-title">{% trans "Forums" %}</h3>
           </div>
           <div class="col-md-1 forum-count-col d-none d-md-block">{% trans "Topics" %}</div>
           <div class="col-md-1 forum-count-col d-none d-md-block">{% trans "Posts" %}</div>
-          <div class="col-md-2 col-sm-3 hidden-xs forum-last-post-col">{% trans "Last post" %}</div>
+          <div class="col-md-2 col-sm-3 d-none d-sm-block forum-last-post-col">{% trans "Last post" %}</div>
         </div>
       </div>
       <div class="card-body">
     {% endif %}
     {% endwith %}
-    <div class="row panel-row">
+    <div class="row">
       {% if not node.obj.is_link %}
       <div class="col-md-7 col-sm-9 col-11 forum-name">
         <table class="forum-data-table">
@@ -69,7 +69,7 @@
       <div class="col-md-1 forum-syndication d-none d-md-block"><a href="{% url 'forum_feeds:forum_latest_topics_with_descendants' node.obj.slug node.obj.pk %}" title="{% trans 'RSS feed' %}"><i class="fa fa-rss-square"></i></a></div>
       <div class="col-md-1 forum-count d-none d-md-block">{{ node.topics_count }}</div>
       <div class="col-md-1 forum-count d-none d-md-block">{{ node.posts_count }}</div>
-      <div class="col-md-2 col-sm-3 hidden-xs forum-last-post">
+      <div class="col-md-2 col-sm-3 d-none d-sm-block forum-last-post">
         {% if node.last_post %}
         {% if node.last_post.poster %}
         {% url 'forum_member:profile' node.last_post.poster_id as poster_url %}
@@ -102,7 +102,7 @@
       </div>
       <div class="col-md-1 forum-count d-none d-md-block"></div>
       <div class="col-md-1 forum-count d-none d-md-block"></div>
-      <div class="col-md-2 col-sm-3 hidden-xs forum-link-redirects">
+      <div class="col-md-2 col-sm-3 d-none d-sm-block forum-link-redirects">
         {% if node.obj.link_redirects %}
         {% trans "Total redirects:" %}&nbsp;{{ node.obj.link_redirects_count|default:"0" }}
         {% endif %}
@@ -118,7 +118,7 @@
     {% endif %}
     {% elif node.level == root_level_middle %}
     {% if node.parent.obj.is_category %}
-    <div class="row panel-row">
+    <div class="row">
       {% if not node.obj.is_link %}
       <div class="col-md-7 col-sm-9 col-11 forum-name">
         <table class="forum-data-table">
@@ -142,7 +142,7 @@
       <div class="col-md-1 forum-syndication d-none d-md-block"><a href="{% url 'forum_feeds:forum_latest_topics_with_descendants' node.obj.slug node.obj.pk %}" title="{% trans 'RSS feed' %}"><i class="fa fa-rss-square"></i></a></div>
       <div class="col-md-1 forum-count d-none d-md-block">{{ node.topics_count }}</div>
       <div class="col-md-1 forum-count d-none d-md-block">{{ node.posts_count }}</div>
-      <div class="col-md-2 col-sm-3 hidden-xs forum-last-post">
+      <div class="col-md-2 col-sm-3 d-none d-sm-block forum-last-post">
         {% if node.last_post %}
         {% if node.last_post.poster_id %}
         {% url 'forum_member:profile' node.last_post.poster_id as poster_url %}
@@ -175,7 +175,7 @@
       </div>
       <div class="col-md-1 forum-count d-none d-md-block"></div>
       <div class="col-md-1 forum-count d-none d-md-block"></div>
-      <div class="col-md-2 col-sm-3 hidden-xs forum-last-post forum-link-redirects">
+      <div class="col-md-2 col-sm-3 d-none d-sm-block forum-last-post forum-link-redirects">
         {% if node.obj.link_redirects %}
         {% trans "Total redirects:" %}&nbsp;{{ node.obj.link_redirects_count|default:"0" }}
         {% endif %}
@@ -198,17 +198,17 @@
     {% else %}
     <div class="card forumlist">
       <div class="card-header">
-        <div class="row panel-row">
+        <div class="row">
           <div class="col-md-8 col-sm-9 col-9 forum-name-col">
             <h3 class="card-title">{% trans "Forums" %}</h3>
           </div>
           <div class="col-md-1 d-none d-md-block forum-count-col">{% trans "Topics" %}</div>
           <div class="col-md-1 d-none d-md-block forum-count-col">{% trans "Posts" %}</div>
-          <div class="col-md-2 col-sm-3 hidden-xs forum-last-post-col">{% trans "Last post" %}</div>
+          <div class="col-md-2 col-sm-3 d-none d-sm-block forum-last-post-col">{% trans "Last post" %}</div>
         </div>
       </div>
       <div class="card-body">
-        <div class="row panel-row">
+        <div class="row">
           <div class="col-md-12">{% trans "No forums." %}</div>
         </div>
       </div>
